-- MySQL Script generated by MySQL Workbench
-- Thu Mar 13 09:12:05 2025
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema circuitforge
-- -----------------------------------------------------
DROP SCHEMA IF EXISTS `circuitforge` ;

-- -----------------------------------------------------
-- Schema circuitforge
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `circuitforge` DEFAULT CHARACTER SET utf8 ;
SHOW WARNINGS;
USE `circuitforge` ;

-- -----------------------------------------------------
-- Table `circuitforge`.`user`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `circuitforge`.`user` ;

SHOW WARNINGS;
CREATE TABLE IF NOT EXISTS `circuitforge`.`user` (
  `user_id` BIGINT NOT NULL,
  `username` VARCHAR(100) NOT NULL,
  PRIMARY KEY (`user_id`))
ENGINE = InnoDB;

SHOW WARNINGS;

-- -----------------------------------------------------
-- Table `circuitforge`.`entity`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `circuitforge`.`entity` ;

SHOW WARNINGS;
CREATE TABLE IF NOT EXISTS `circuitforge`.`entity` (
  `entity_id` BIGINT NOT NULL AUTO_INCREMENT,
  `author_id` BIGINT NOT NULL,
  `entity_type` ENUM('post', 'comment', 'discussion') NOT NULL,
  `content` TEXT NOT NULL,
  `created_at` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  PRIMARY KEY (`entity_id`),
  INDEX `author_user_id_idx` (`author_id` ASC) VISIBLE,
  CONSTRAINT `fk_entity_user_id`
    FOREIGN KEY (`author_id`)
    REFERENCES `circuitforge`.`user` (`user_id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;

SHOW WARNINGS;

-- -----------------------------------------------------
-- Table `circuitforge`.`post`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `circuitforge`.`post` ;

SHOW WARNINGS;
CREATE TABLE IF NOT EXISTS `circuitforge`.`post` (
  `post_id` BIGINT NOT NULL,
  `title` VARCHAR(100) NOT NULL,
  PRIMARY KEY (`post_id`),
  CONSTRAINT `fk_post_entity_id`
    FOREIGN KEY (`post_id`)
    REFERENCES `circuitforge`.`entity` (`entity_id`)
    ON DELETE CASCADE
    ON UPDATE CASCADE)
ENGINE = InnoDB;

SHOW WARNINGS;

-- -----------------------------------------------------
-- Table `circuitforge`.`comment`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `circuitforge`.`comment` ;

SHOW WARNINGS;
CREATE TABLE IF NOT EXISTS `circuitforge`.`comment` (
  `comment_id` BIGINT NOT NULL,
  `parent_id` BIGINT NOT NULL,
  PRIMARY KEY (`comment_id`),
  INDEX `comment_id_idx` (`parent_id` ASC) VISIBLE,
  CONSTRAINT `fk_comment_entity_id`
    FOREIGN KEY (`comment_id`)
    REFERENCES `circuitforge`.`entity` (`entity_id`)
    ON DELETE CASCADE
    ON UPDATE CASCADE,
  CONSTRAINT `fk_comment_comment_id`
    FOREIGN KEY (`parent_id`)
    REFERENCES `circuitforge`.`entity` (`entity_id`)
    ON DELETE CASCADE
    ON UPDATE CASCADE)
ENGINE = InnoDB;

SHOW WARNINGS;

-- -----------------------------------------------------
-- Table `circuitforge`.`discussion`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `circuitforge`.`discussion` ;

SHOW WARNINGS;
CREATE TABLE IF NOT EXISTS `circuitforge`.`discussion` (
  `post_id` BIGINT NOT NULL,
  `title` VARCHAR(100) NOT NULL,
  PRIMARY KEY (`post_id`),
  CONSTRAINT `fk_discussion_entity_id`
    FOREIGN KEY (`post_id`)
    REFERENCES `circuitforge`.`entity` (`entity_id`)
    ON DELETE CASCADE
    ON UPDATE CASCADE)
ENGINE = InnoDB;

SHOW WARNINGS;

-- -----------------------------------------------------
-- Table `circuitforge`.`comment`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `circuitforge`.`comment` ;

SHOW WARNINGS;
CREATE TABLE IF NOT EXISTS `circuitforge`.`comment` (
  `comment_id` BIGINT NOT NULL,
  `parent_id` BIGINT NOT NULL,
  PRIMARY KEY (`comment_id`),
  INDEX `comment_id_idx` (`parent_id` ASC) VISIBLE,
  CONSTRAINT `fk_comment_entity_id`
    FOREIGN KEY (`comment_id`)
    REFERENCES `circuitforge`.`entity` (`entity_id`)
    ON DELETE CASCADE
    ON UPDATE CASCADE,
  CONSTRAINT `fk_comment_comment_id`
    FOREIGN KEY (`parent_id`)
    REFERENCES `circuitforge`.`entity` (`entity_id`)
    ON DELETE CASCADE
    ON UPDATE CASCADE)
ENGINE = InnoDB;

SHOW WARNINGS;

-- -----------------------------------------------------
-- Table `circuitforge`.`rating`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `circuitforge`.`rating` ;

SHOW WARNINGS;
CREATE TABLE IF NOT EXISTS `circuitforge`.`rating` (
  `entity_id` BIGINT NOT NULL,
  `user_id` BIGINT NOT NULL,
  `rating` INT NOT NULL,
  `created_at` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  PRIMARY KEY (`entity_id`, `user_id`),
  INDEX `user_id_idx` (`user_id` ASC) VISIBLE,
  CONSTRAINT `fk_entity_id`
    FOREIGN KEY (`entity_id`)
    REFERENCES `circuitforge`.`entity` (`entity_id`)
    ON DELETE CASCADE
    ON UPDATE CASCADE,
  CONSTRAINT `fk_user_id`
    FOREIGN KEY (`user_id`)
    REFERENCES `circuitforge`.`user` (`user_id`)
    ON DELETE CASCADE
    ON UPDATE CASCADE)
ENGINE = InnoDB;

SHOW WARNINGS;

-- -----------------------------------------------------
-- Table `circuitforge`.`bookmark`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `circuitforge`.`bookmark` ;

SHOW WARNINGS;
CREATE TABLE IF NOT EXISTS `circuitforge`.`bookmark` (
  `entity_id` BIGINT NOT NULL,
  `user_id` BIGINT NOT NULL,
  `created_at` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  PRIMARY KEY (`entity_id`, `user_id`),
  INDEX `user_id_idx` (`user_id` ASC) VISIBLE,
  CONSTRAINT `fk_bookmark_entity_id`
    FOREIGN KEY (`entity_id`)
    REFERENCES `circuitforge`.`entity` (`entity_id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_bookmark_user_id`
    FOREIGN KEY (`user_id`)
    REFERENCES `circuitforge`.`user` (`user_id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;

SHOW WARNINGS;

-- -----------------------------------------------------
-- Table `circuitforge`.`asset`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `circuitforge`.`asset` ;

SHOW WARNINGS;
CREATE TABLE IF NOT EXISTS `circuitforge`.`asset` (
  `asset_id` BIGINT NOT NULL,
  `filename` VARCHAR(45) NOT NULL,
  `post_id` BIGINT NOT NULL,
  `type` ENUM('gallery', 'schematic', 'file') NOT NULL,
  PRIMARY KEY (`asset_id`),
  INDEX `post_id_idx` (`post_id` ASC) VISIBLE,
  CONSTRAINT `fk_asset_post_id`
    FOREIGN KEY (`post_id`)
    REFERENCES `circuitforge`.`post` (`post_id`)
    ON DELETE CASCADE
    ON UPDATE CASCADE)
ENGINE = InnoDB;

SHOW WARNINGS;

-- -----------------------------------------------------
-- Table `circuitforge`.`edit_request`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `circuitforge`.`edit_request` ;

SHOW WARNINGS;
CREATE TABLE IF NOT EXISTS `circuitforge`.`edit_request` (
  `post_id` BIGINT NOT NULL,
  `user_id` BIGINT NOT NULL,
  `content` TEXT NOT NULL,
  `created_at` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  PRIMARY KEY (`post_id`, `user_id`),
  INDEX `user_id_idx` (`user_id` ASC) VISIBLE,
  CONSTRAINT `fk_edit_request_post_id`
    FOREIGN KEY (`post_id`)
    REFERENCES `circuitforge`.`post` (`post_id`)
    ON DELETE CASCADE
    ON UPDATE CASCADE,
  CONSTRAINT `fk_edit_request_user_id`
    FOREIGN KEY (`user_id`)
    REFERENCES `circuitforge`.`user` (`user_id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;

SHOW WARNINGS;

-- -----------------------------------------------------
-- Table `circuitforge`.`timestamps`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `circuitforge`.`timestamps` ;

SHOW WARNINGS;
CREATE TABLE IF NOT EXISTS `circuitforge`.`timestamps` (
  `create_time` TIMESTAMP NULL DEFAULT CURRENT_TIMESTAMP,
  `update_time` TIMESTAMP NULL);

SHOW WARNINGS;

-- -----------------------------------------------------
-- Table `circuitforge`.`category`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `circuitforge`.`category` ;

SHOW WARNINGS;
CREATE TABLE IF NOT EXISTS `circuitforge`.`category` (
  `category_id` INT NOT NULL,
  `name` VARCHAR(255) NOT NULL,
  PRIMARY KEY (`category_id`));

SHOW WARNINGS;
SET SQL_MODE = '';
DROP USER IF EXISTS circuitforge;
SET SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';
SHOW WARNINGS;
CREATE USER 'circuitforge' IDENTIFIED BY '123';

GRANT ALL ON `circuitforge`.* TO 'circuitforge';
SHOW WARNINGS;

SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;
